style for navbar fix z-index over about section, box shadow about section

--- a/src/components/about/about.styles.css
+++ b/src/components/about/about.styles.css
@@ -1,22 +1,10 @@
+
 .about-container {
   position: relative;
   display: flex;
   justify-content: space-around;
   align-items: center;
   width: 100%;
-  overflow: hidden;
-}
-
-.about-container::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  /* background: url(../../media/pink-image.jpg) no-repeat center center/cover;
-  filter: blur(25px);
-  z-index: 0; */
 }
 
 .about-img {
@@ -25,9 +13,16 @@
 }
 
 .about-info {
-  z-index: 2;
   width: 50%;
   padding: 10px 60px;
+  /* border-radius: 50px;
+  -webkit-box-shadow: 0px 0px 63px -13px rgba(125, 255, 119, 1);
+  -moz-box-shadow: 0px 0px 63px -13px rgba(125, 255, 119, 1);
+  box-shadow: 0px 0px 63px -13px rgba(125, 255, 119, 1); */
+  border-radius: 50px;
+  background: var(--background-color);
+  box-shadow:  20px 20px 60px #bebebe,
+              -20px -20px 60px #ffffff;
 }
 
 .about-info p {
@@ -38,12 +33,8 @@
 }
 
 @media (max-width: 1240px) {
-  /* .about-img {
-    height: 200px;
-  } */
   .about-info {
     width: 70%;
-    /* padding: 0 40px; */
   }
   .about-info p {
     font-size: 14px;
@@ -54,16 +45,17 @@
 @media (max-width: 768px) {
   .about-container {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
   .about-img {
     display: none;
   }
   .about-info {
-    width: 100%;
+    width: 98%;
     padding: 0 20px;
   }
   .about-info p {
     font-size: 13px;
+    text-align: center;
   }
 }
