--- a/src/components/navigation/nav.styles.css
+++ b/src/components/navigation/nav.styles.css
@@ -50,7 +50,9 @@ button {
     position: sticky;
     top: 0;
     background-color: var(--background-color);
-    padding: 20px 20px
+    padding: 20px 20px;
+    z-index:1000;
+    border-bottom: lime 1px solid;
   }
   .nav-links {
     display: none;
